--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <link rel="stylesheet" href="./node_modules/leaflet/dist/leaflet.css" />
+    <link rel="stylesheet" href="./style/leaflet.css" />
     <link rel="stylesheet" href="./style/main.css" />
 
     <link
@@ -26,8 +26,8 @@
 
     <!-- CDN -->
     <script src="./js/d3.v4.min.js"></script>
-    <script src="./node_modules/leaflet/dist/leaflet.js"></script>
-    <script src="./node_modules/chroma-js/chroma.min.js"></script>
+    <script src="./js/leaflet.js"></script>
+    <script src="./js/chroma.min.js"></script>
 <script src="./data/hungary.js"></script>
 
     <!-- Plugin -->
