--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   </head>
 
   <body>
-    <h1 class="title mapTitle">
+    <p class="title mapTitle">
       Stream animation width interpolated temperatures
-    </h1>
-    <h2 class="title mapTitle mapTitle--source">
+    </p>
+    <p class="title mapTitle mapTitle--source">
       WRF data, 2022. 12. 29. 06UTC
-    </h2>
+    </p>
     <div id="map"></div>
 
     <!-- CDN -->
